@@ -37,16 +37,13 @@ In order to run RSpec's full suite of specs (rake pre_commit) you must install t
 * diff-lcs      # Required if you use the --diff switch
 * win32console  # Required by the --colour switch if you're on Windows
 * meta_project  # Required in order to make releases at RubyForge
-* sqlite3-ruby  # Required by RSpec on Rails specs
-* ZenTest       # Required by RSpec on Rails specs
-* Rails         # Required by RSpec on Rails specs
-
-You must also install SQLite - which is needed to test the Rails plugin.
+* heckle        # Required if you use the --heckle switch
 
 Note that RSpec itself - once built - doesn't have any dependencies outside the Ruby core 
 and stdlib - with a few exceptions:
 
 * The spec command line uses diff-lcs when --diff is specified.
+* The spec command line uses heckle when --heckle is specified.
 * The Spec::Rake::SpecTask needs RCov if RCov is enabled in the task.
 * RSpec on Rails needs the ZenTest gem to be installed (and Rails and its dependencies of course)
 
